ncc/testsuite/negative/immutable-field.n
def x = 1 :: [];
x.tl = [2]; // E: needed a writable location for assignment target, got a reference to field `tl', which is read-only
